logs/django-simple-ratings.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_generic_aggregation-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/django_simple_ratings-0.3.3.dist-info'...
Listing './lib/python3.5/site-packages/generic_aggregation'...
Listing './lib/python3.5/site-packages/generic_aggregation_tests'...
Listing './lib/python3.5/site-packages/generic_aggregation_tests/migrations'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ratings'...
Listing './lib/python3.5/site-packages/ratings/management'...
Listing './lib/python3.5/site-packages/ratings/management/commands'...
Compiling './lib/python3.5/site-packages/ratings/management/commands/update_similar_items.py'...
***   File "./lib/python3.5/site-packages/ratings/management/commands/update_similar_items.py", line 51
    print 'Updating the %s field of %s' % (k, model)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ratings/migrations'...
Listing './lib/python3.5/site-packages/ratings/ratings_tests'...
Listing './lib/python3.5/site-packages/ratings/templatetags'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
